tests/common/snapshots/srec__common__tests__srec.rs-14-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 220
  name: srecord
  confidence: 250
  description: "Motorola S-record, origin OS: Windows, total size: 220 bytes"
  always_display: false
  extraction_declined: false
