tests/common/snapshots/srec__common__tests__srec.rs-14-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 220
  success: true
  extractor: srecord_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
