tests/common/snapshots/srec__common__tests__srec.rs-23-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 3822
  success: true
  extractor: srecord_generic_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
