tests/common/snapshots/srec__common__tests__srec.rs-7-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 3142
  name: srecord
  confidence: 250
  description: "Motorola S-record, origin OS: Unix, total size: 3142 bytes"
  always_display: false
  extraction_declined: false
